# Hackathon-2-Q4

./: .gitignore  Dockerfile  README.md  frontend.py  main.py  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
Phase-01/: requirements.txt  test_basic_functionality.py
Phase-02/backend/: auth.py  main.py  models.py  reset_db.py  reset_db_simple.py  todo_test.db
Phase-02/frontend/: .env.local  package.json  test_frontend.js
Phase-03/: requirements.txt
Phase-03/backend/: __init__.py  agent.py  auth.py  database.db  database.py  main.py  mcp_tools.py  models.py
Phase-05/: Dockerfile  README.md  cloud-deployment.md  consumer.py  docker-compose.yml  frontend.py  main.py  producer.py  requirements.txt
Phase4/: Chart.yaml  Dockerfile  deployment.yaml  docker-compose.yml  main.py  requirements.txt  service.yaml  values.yaml
Phase4/templates/: _helpers.tpl  deployment.yaml  service.yaml
backend/: auth.py  init_db.py  main.py  models.py
frontend/: package-lock.json  tsconfig.tsbuildinfo
frontend/.next/: trace
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/src/app/: layout.tsx
frontend/utils/: auth.ts
history/prompts/general/: 1-update-auth-pages-ui.general.prompt.md  (+4 more)
specs/: architecture.md  auth_spec.md  backend_spec.md  database_spec.md  frontend_spec.md  phase1_core.md  spec-4_backend_mcp.md
specs/phase-i-console-todo/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
todo_app/: __init__.py  interface.py  main.py  models.py  operations.py  storage.py
(+43 files in other folders)
