[project]
name = "todo-app"
version = "0.1.0"
description = "Phase I In-Memory Console Todo App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["todo_app*", "backend*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"